# CppRevolution

./: .gitignore  build.sh  meson.build
cpp/: math.hpp  meson.build  qf.cpp  qf.hpp
cpp/tests/: math.cpp  meson.build  t1.cpp
csharp/: binding.cpp  meson.build
csharp/tests/: UnitTest1.cs  cpp.cs  test.csproj  tests.csproj
ideas/: instrument-layer.cpp  meson.build  option-test.cpp  option.hpp
python/: binding.cpp  meson.build
python/tests/: t1.ipynb
